# SatuTe

./: .gitignore  FileHandler.py  README.md  SatuteCLI.py  amino_acid_models.py  amino_acid_models.txt  asci_art.py  calculate_partial_likelihood.py  create_documentation.sh  create_executeable.py  direction_based_saturation_test.py  dna_model.py  file_handler.py  foundationsSatute.md  generate_subtrees.py  graph.py  likelihood.ipynb  main.py  nodestyle.py  nucleotide_code_vector.py  output.json  partial_likelihood.py  partial_likelihood_test.py  pyproject.toml  random_generated.tree  rate_matrix.py  remove_files_except.py  requirements.txt  saturation_power_test.py  saturation_test_graph_partial_likelihood.py  saturation_test_graph_partial_likelihood.py.lprof  satute.py  satute_arguments.py  satute_calculate_likelihoods.py  satute_call_script.sh  satute_call_script_elli.sh  satute_categories.py  satute_cli.py  satute_cli.py.lprof  satute_cli_old.py  (+34 more)
chat_gpt_doc/: amino_acid_models.py  create_executeable.py  graph.py  partial_likelihood.py  satute_arguments.py  satute_categories.py  satute_cli.py  satute_exception.py  satute_ostream.py  satute_rate_analysis.py  satute_repository.py  satute_result.py  satute_sequences.py  satute_statistic_posterior_distribution.py  satute_statistic_posterior_distribution_components.py  satute_trees.py  satute_util.py
docs/: README.rst  conf.py  create_executeable.rst  dna_model.rst  index.rst  modules.rst  satute_arguments.rst  satute_categories.rst  satute_cli.rst  satute_exception.rst  satute_repository.rst  satute_util.rst  (+2 more)
(+1382 files in other folders)
